--- a/part1/index.html
+++ b/part1/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="./assets/icons/full-stack-open.svg"
+      href="../assets/icons/full-stack-open.svg"
       type="image/svg+xml"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Helsinki FSO Study</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Helsinki FSO Study - P1</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <header>
+      <p class="home-link">
+        <a href="../">&lt;&lt; Home</a>
+      </p>
       <h1>University of Helsinki: Full Stack Open Study</h1>
       <p>
         <a href="https://fullstackopen.com/en/"
@@ -21,21 +24,20 @@
       </p>
     </header>
     <main>
-      <h2>Completed Course Parts</h2>
+      <h2>My Solution for Part 1</h2>
       <p>
         <strong>NB</strong>: These were the required exercises when I was
         studying the course, <em>but they may change over time</em>.
       </p>
       <ul>
         <li>
-          <a
-            href="https://github.com/hussein-m-kandil/helsinki-fso-study/tree/main/part0/"
-          >
-            Part 0: Fundamentals of Web apps
-          </a>
+          <a href="./courseinfo/app/">Course Information</a>
         </li>
         <li>
-          <a href="./part1/"> Part 1: Introduction to React </a>
+          <a href="./unicafe/app/">Unicafe</a>
+        </li>
+        <li>
+          <a href="./anecdotes/app/">Anecdotes</a>
         </li>
       </ul>
     </main>
