--- a/part3/index.html
+++ b/part3/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="./assets/icons/full-stack-open.svg"
+      href="../assets/icons/full-stack-open.svg"
       type="image/svg+xml"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Helsinki FSO Study</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Helsinki FSO Study - P3</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <header>
+      <p class="home-link">
+        <a href="../">&lt;&lt; Home</a>
+      </p>
       <h1>University of Helsinki: Full Stack Open Study</h1>
       <p>
         <a href="https://fullstackopen.com/en/"
@@ -21,29 +24,16 @@
       </p>
     </header>
     <main>
-      <h2>Completed Course Parts</h2>
+      <h2>My Solution for Part 3</h2>
       <p>
         <strong>NB</strong>: These were the required exercises when I was
         studying the course, <em>but they may change over time</em>.
       </p>
       <ul>
         <li>
-          <a
-            href="https://github.com/hussein-m-kandil/helsinki-fso-study/tree/main/part0/"
+          <a href="https://helsinki-fso-p3-phonebook.vercel.app/"
+            >Phonebook (Full Stack)</a
           >
-            Part 0: Fundamentals of Web apps
-          </a>
-        </li>
-        <li>
-          <a href="./part1/"> Part 1: Introduction to React </a>
-        </li>
-        <li>
-          <a href="./part2/"> Part 2: Communicating with server </a>
-        </li>
-        <li>
-          <a href="./part3/">
-            Part 3: Programming a server with NodeJS and Express
-          </a>
         </li>
       </ul>
     </main>
