Complete the exercises for Part 5

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link
       rel="icon"
       href="./assets/icons/full-stack-open.svg"
-      type="image/svg+xml"
-    />
+      type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Helsinki FSO Study</title>
     <link rel="stylesheet" href="./styles.css" />
@@ -29,8 +28,7 @@
       <ul>
         <li>
           <a
-            href="https://github.com/hussein-m-kandil/helsinki-fso-study/tree/main/part0/"
-          >
+            href="https://github.com/hussein-m-kandil/helsinki-fso-study/tree/main/part0/">
             Part 0: Fundamentals of Web apps
           </a>
         </li>
@@ -45,12 +43,20 @@
             Part 3: Programming a server with NodeJS and Express
           </a>
         </li>
+        <li>
+          <a href="./part4/">
+            Part 4: Testing Express servers, user administration
+          </a>
+        </li>
+        <li>
+          <a href="./part5/"> Part 5: Testing React apps </a>
+        </li>
       </ul>
     </main>
     <footer>
       <p>
         <a href="http://github.com/hussein-m-kandil/helsinki-fso-study/"
-          >&copy; 2024 Hussein Kandil | GitHub</a
+          >&copy; 2025 Hussein Kandil | GitHub</a
         >
       </p>
     </footer>
