Complete the exercises for Part 6

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <li>
           <a href="./part5/"> Part 5: Testing React apps </a>
         </li>
+        <li>
+          <a href="./part6/"> Part 6: State management with Redux </a>
+        </li>
       </ul>
     </main>
     <footer>
